2011-06-20  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/keyfile.c, doc/geany.txt,
   doc/geany.html:
   Add an hidden pref to choose between GIO and plain C unsafe
   file saving.
 * configure.ac, src/document.c, win32-config.h:
   Completely drop HAVE_GIO checks.


2011-06-18  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/editor.c:
   Remove support of size being -1 in document_open_file_list().
 * src/utils.c src/utils.h:
   Remove support of size being -1 in utils_get_line_endings().
 * src/stash.c, src/stash.h:
   Make StashWidgetID map to gconstpointer, allowing use of const
   strings as the widget key.


2011-06-16  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/main.c, src/ui_utils.c, src/utils.c:
   Remove most of the checks for GIO.
 * src/win32.c:
   Remove last GLib >= 2.16 check.


2011-06-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   Fix two bugs with triple quoted strings within comments
   and missing indentation within triple quoted strings
   (#3316966, synced from CTags SVN, patch by Elias Pschernig, thanks).


2011-06-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.python:
   Add Cython keywords.


2011-06-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * configure.ac, src/Makefile.am, src/makefile.win32, wscript:
   Bump dependencies to GTK >= 2.12, GLib >= 2.16 and GIO.
 * plugins/export.c, plugins/filebrowser.c, plugins/splitwindow.c,
   src/build.c, src/dialogs.c, src/document.c, src/highlighting.c,
   src/printing.c, src/project.c, src/search.c, src/ui_utils.c,
   src/vte.c:
   Deprecate ui_widget_set_tooltip_text() in favor of
   gtk_widget_set_tooltip_text().
 * configure.ac, doc/geany.html, doc/geany.txt, src/callbacks.c,
   src/keyfile.c, src/main.c, src/prefs.c, src/printing.c,
   src/printing.h:
   Enable GTK printing support unconditionally.