@@ -28,10 +28,10 @@ The basic features of Geany are:
 
 Requirements
 ------------
-For compiling Geany yourself, you will need the GTK (>= 2.8.0) libraries
-and header files. You will also need its dependency libraries and header
-files, such as Pango, Glib and ATK. All these files are available at
-http://www.gtk.org.
+For compiling Geany yourself, you will need the GTK (>= 2.12.0)
+libraries and header files. You will also need its dependency libraries
+and header files, such as Pango, Glib and ATK. All these files are
+available at http://www.gtk.org.
 
 Furthermore you need, of course, a C compiler and the Make tool; a C++
 compiler is also needed for the required Scintilla library included. The
