@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.7: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="$Date$" />
+<meta name="date" content="2011-06-20" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>$Date$</td></tr>
+<td>2011-06-20</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -568,7 +568,7 @@ The latest version can always be found at <a class="reference external" href="ht
 <h1><a class="toc-backref" href="#id12">Installation</a></h1>
 <div class="section" id="requirements">
 <h2><a class="toc-backref" href="#id13">Requirements</a></h2>
-<p>You will need the GTK (&gt;= 2.8.0) libraries and their dependencies
+<p>You will need the GTK (&gt;= 2.12.0) libraries and their dependencies
 (Pango, GLib and ATK). Your distro should provide packages for these,
 usually installed by default. For Windows, you can download an installer
 from the website which bundles these libraries.</p>
@@ -581,7 +581,7 @@ incomplete list see <a class="reference external" href="http://www.geany.org/Dow
 <div class="section" id="source-compilation">
 <h2><a class="toc-backref" href="#id15">Source compilation</a></h2>
 <p>Compiling Geany is quite easy.
-To do so, you need the GTK (&gt;= 2.8.0) libraries and header files.
+To do so, you need the GTK (&gt;= 2.12.0) libraries and header files.
 You also need the Pango, GLib and ATK libraries and header files.
 All these files are available at <a class="reference external" href="http://www.gtk.org">http://www.gtk.org</a>, but very often
 your distro will provide development packages to save the trouble of
@@ -6579,7 +6579,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-06-20 15:39 UTC.
+Generated on: 2011-06-26 21:26 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
