@@ -1,3 +1,10 @@
+2011-06-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/callbacks.c, doc/geany.txt, doc/geany.html, README, HACKING,
+   geany.pc.in:
+   More GTK 2.8 => GTK 2.12 transition.
+
+
 2011-06-20  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/document.c, src/document.h, src/keyfile.c, doc/geany.txt,
